# json-validator

./: CMakeLists.txt  README.md
data/: sample.json
data/nia35_data/악천후/22_140034_220613/: DA_00R_HI_210902_01_000038.json
data/nia35_data/야간도심/22_140014_220613/: DA_00R_HI_210902_01_000035.json
data/nia35_data/야간도심/22_140034_220613/: DA_00R_HI_210902_01_000040.json
data/nia35_data/야간전용도로/22_140014_220613/: DA_00R_HI_210902_01_000034.json  DA_00R_HI_210902_01_000036_error.txt
data/nia35_data/주간전용도로/22_140014_220613/: DA_00R_HI_210902_01_000031.json  DA_00R_HI_210902_01_000032_error.txt
data/nia35_data/주간전용도로/22_140034_220613/: DA_00R_HI_210902_01_000039.json  DA_00R_HI_210902_01_000039_error.txt
data/sample/scenario1/18_081320_220624/: 18_081320_220624_01.json  18_081320_220624_02.json  18_081320_220624_03.json  18_081320_220624_04.json  18_081320_220624_05.json  18_081320_220624_06.json  18_081320_220624_07.json  18_081320_220624_08.json  18_081320_220624_09.json  18_081320_220624_10.json  18_081320_220624_11.json  18_081320_220624_12.json  18_081320_220624_13.json  18_081320_220624_14.json  18_081320_220624_15.json  18_081320_220624_16.json  18_081320_220624_27.json  18_081320_220624_28.json  18_081320_220624_29.json  18_081320_220624_30.json  (+2 more)
data/sample_data/: sample.json
data/sample_data/scheme/: scheme.json
data/scheme/: 2dscheme.json
data/ts_data/: DA_00R_HI_210902_01_000032.json  DA_00R_HI_210902_01_000033.json  DA_00R_HI_210902_01_000036.json  DA_00R_HI_210902_01_000036_error.txt  DA_00R_HI_210902_01_000037.json  DA_00R_HI_210902_01_000039.json  DA_00R_HI_210902_01_000041.json
data/ts_data/scheme/: scheme.json
src/forms/: aboutwindow.ui  mainwindow.ui
src/headers/: jsonValidator.h  mainwindow.h  validator.h
src/resource/: resources.qrc
src/sources/: jsonValidator.cpp  mainwindow.cpp  validator.cpp
(+202 files in other folders)
